[package]
name = "dma_bot_rust"
version = "0.5.0"
edition = "2021"

[dependencies]
# Async runtime & utils
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
ahash = "0.8"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Config / CLI / env
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
once_cell = "1.19"

# Time & randomness
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server (metrics) & client (Binance REST)
hyper = { version = "0.14", features = ["full"] }
# Penting: pakai reqwest 0.11 agar kompatibel dengan hyper 0.14
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
url = "2"

# Prometheus metrics
prometheus = "0.13"

# Crypto utils untuk tanda tangan Binance
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# URL encoding untuk query signing
urlencoding = "2.1"

# Error helpers (opsional, tidak wajib jika tak dipakai)
thiserror = "1"
